welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: reassignment to val
	if(negative=false) {
                   ^posNeg:3: error: value =< is not a member of Int
		if(a*b=<0) {
                      ^posNeg:9: error: value =< is not a member of Int
			if(a=<0 && b=<0) {
                            ^